fix spacing

--- a/src/components/cardComponent/Card.scss
+++ b/src/components/cardComponent/Card.scss
@@ -73,6 +73,7 @@ $dark-alt: rgba(64, 120, 153, 1);
             border-radius: 5px;
             margin-top: 15px;
             font-size: 1.2rem;
+            margin-bottom: 10px;
         }
 		span {
 			margin-right: 2px;
